<resources>
    <string name="app_name">Magic: Life Counter</string>
    <string name="one_player">1 Player</string>
    <string name="p1_parameters">Player 1 Parameters</string>
    <string name="start">Start</string>
    <string name="player_name">Player name:</string>
    <string name="player1">Player 1</string>
    <string name="life_start">Life start:</string>
    <string name="p2_parameters">Player 2 Parameters</string>
    <string name="player2">Player 2</string>
    <string name="two_players">2 Players</string>
    <string name="coinFlip_DiceRoll">Coin flip\nDice roll</string>
</resources>
