<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onePlayer.OnePlayerParametersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/p1_parameters"
            android:textColor="#000000"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="40"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/onePlayerParams_p1Name"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_height="wrap_content"
                android:text="@string/player1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="40"
                android:layout_height="wrap_content"
                android:text="@string/life_start"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/onePlayerParams_p1Life"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="20"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="20dp"
            android:background="@color/accept"
            android:layout_gravity="center"
            android:onClick="startCounter"/>

    </LinearLayout>

</ScrollView>

